# ic_infinitecloud_bot

./: .env.example  Cargo.toml  README.md  canister_ids.json  dfx.json  rust-toolchain.toml
.github/workflows/: mainnet-deploy.yml  rust-tests.yml
scripts/: build-canister.sh  deploy-local-with-ngork-tunnel.sh  lint.sh  test.sh
src/backend/: Cargo.toml  backend.did
src/backend/src/: lib.rs
src/backend/src/controllers/: chat_session.rs  http.rs  mod.rs
src/backend/src/repositories/: chat_session_repository.rs  filesystem_repository.rs  mod.rs
src/backend/src/repositories/memories/: chat_session_memory.rs  filesystem_memory.rs  memory_manager.rs  mod.rs
src/backend/src/repositories/types/: chat_id.rs  chat_session.rs  command.rs  filesystem.rs  http.rs  mod.rs
src/backend/src/services/: access_control_service.rs  admin_service.rs  chat_session_service.rs  filesystem_service.rs  mod.rs
src/backend/src/utils/: defaults.rs  mod.rs  path.rs  reply.rs
src/infinitecloud_bot_backend/: Cargo.toml
