[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-stable-structures = "0.6"

serde = "1.0"
serde_json = "1.0"

frankenstein = { version = "0.30", default-features = false }

const_format = "0.2"

[dev-dependencies]
rstest = "0.18"
