[package]
name = "backend"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-stable-structures = "0.6"

serde = "1.0"
serde_json = "1.0"

frankenstein = { version = "0.35", default-features = false }

const_format = "0.2"
mime2ext = "0.1"

[dev-dependencies]
rstest = "0.23"
