[package]
name = "backend"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.13"
ic-cdk = "0.18.1"
ic-stable-structures = "0.6.8"

serde = "1.0.219"
serde_json = "1.0.140"

frankenstein = { version = "0.40.0", default-features = false }

const_format = "0.2.34"
mime2ext = "0.1.54"

[dev-dependencies]
rstest = "0.25.0"
